# track-mapper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/mesh-simplification/: CMakeLists.txt  main.cpp
data/experiments/fbx-export/: cube.fbx  plane-reexport.fbx  plane.fbx
data/experiments/road-creation/: path-short.csv  path.csv
data/fbx-export/: README.md  plane-ascii.fbx
data/fmi-graph/: source.txt
data/raster-file/de/: source.txt
data/raster-file/de/dgm1_32_529_5376_2_bw/: dgm1_32_529_5376_1_bw_2017.csv  dgm1_32_529_5377_1_bw_2017.csv  dgm1_32_530_5376_1_bw_2017.csv  dgm1_32_530_5377_1_bw_2017.csv
data/scene-export/: .gitignore  plane-test.fbx
data/scene-export/texture/: SOURCE.txt
data/web/: index.html  main.js  style.css
experiments/: CMakeLists.txt
experiments/fbx-export/: CMakeLists.txt  README.md  convertfbx.cpp  exportfbx.cpp  fbxsdk.cmake  printfbx.cpp
experiments/gdal-info/: CMakeLists.txt  main.cpp
experiments/point-projection/: CMakeLists.txt  main.cpp
experiments/road-creation/: CMakeLists.txt  main.cpp
experiments/spline-sampling/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/graph/: BasicGraph.cpp  CMakeLists.txt  FMIGraphReader.cpp  FMIGraphReader.h  IGraph.h  SimpleWorldGrid.h  main.cpp
src/graphs/: BasicGraph.h  DijkstraPathfinding.cpp  DijkstraPathfinding.h  FMIGraph.cpp  FMIGraph.h  FMIGraphReader.cpp  FMIGraphReader.h  Graph.cpp  Graph.h  IGraph.h  IGrid.h  SimpleWorldGrid.cpp  SimpleWorldGrid.h
src/mesh/: CMakeLists.txt  gdal_wrapper.cpp  gdal_wrapper.h  interpolation.cpp  interpolation.h  main.cpp  mesh_converter.cpp  mesh_converter.h  mesh_operations.cpp  mesh_operations.h  raster_reader.cpp  raster_reader.h
src/scene/: CMakeLists.txt  TrackCreator.cpp  TrackCreator.h  TrackScene.cpp  TrackScene.h  fbxsdk.cmake  main.cpp
src/web/: BasicWebApp.cpp  BasicWebApp.h  CMakeLists.txt  TestWebApp.cpp  TestWebApp.h  TrackData.h  error_codes.h  errors.h  main.cpp  strings_config.h
src/web/static/: index.html  input.js  map.js  style.css
